Removed unused imports and some very minor cleanup.